--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,30 @@
 language: node_js
 node_js: stable
 
-# S: Build Lifecycle
+env:
+  global:
+    - GH_REF: github.com/slashgao/slashgao.github.io.git
+
+branchs:
+  only:
+    - dev
+
+cache:
+  directories:
+    - node_modules
+
+# Start: Build Lifecycle
+before_install:
+  - npm install -g hexo-cli
+
 install:
   - npm install
 
 #before_script:
 
 script:
-  - hexo clean && hexo g
+  - hexo clean
+  - hexo generate
 
 after_script:
   - cd ./public
@@ -18,12 +34,7 @@ after_script:
   - git add .
   - git commit -m "Update docs"
   - git push --force --quiet "https://${GITHUB_TOKEN}@${GH_REF}" master:master
-# E: Build LifeCycle
+# End: Build LifeCycle
 
-branchs:
-  only:
-    - dev
 
-env:
-  global:
-    - GH_REF: github.com/slashgao/slashgao.github.io.git
+
