--- a/_config.yml
+++ b/_config.yml
@@ -72,9 +72,26 @@ pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
+plugin:
+  - hexo-generator-feed
+feed: # RSS订阅插件
+  type: atom
+  path: atom.xml
+  limit: 0
 ## Themes: https://hexo.io/themes/
 theme: next
 
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
+
+symbols_count_time:
+  symbols: true
+  time: true
+  total_symbols: true
+  total_time: true
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
